# Soterra-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  security_best_practices_report.md  vercel.json
.github/workflows/: build-backend-image.yml
deploy-temp/: README.md
deploy-temp/soterra_backend/: analytics.py  config.py  demo_extractions.py  email_service.py  extraction_quality_gate.py  models.py  repository.py  utils.py
docs/: backend-guide.md  document-ai-evaluation-template.csv  extraction-performance-report.md  inspection-extraction.schema.json  multi-tenancy-security-review.md  open-source-notebook-approach.md  open-source-tech-stack-comparison.csv  report-extraction-targets.md  top-5-open-source-tech-stacks.md
notebooks/: inspection_benchmark.ipynb  inspection_benchmark.py  inspection_pipeline_benchmark.ipynb  inspection_pipeline_benchmark.py
scripts/: debug_text_extraction.py  reset-backend-demo-data.ps1
soterra_backend/: ai.py  analytics.py  api.py  config.py  email_service.py  extraction_quality.py  extraction_quality_gate.py  huggingface.py  issue_intelligence.py  local_schema.sql  models.py  repository.py  service.py  storage.py  text_extraction.py
soterra_backend/agent/: __init__.py  direct_transformers.py  local_agent.py  prompts.py  schemas.py  service.py  tools.py
soterra_backend/api/: __init__.py  dependencies.py  security.py
soterra_backend/extraction/: __init__.py  location_quality.py
soterra_backend/extractors/: __init__.py  base.py  demo.py  kauri_reports.py  ollama_model.py  ollama_text.py  openai_model.py  package_doctr.py  parsed_document.py
soterra_backend/repositories/: __init__.py  base.py
soterra_backend/schemas/: auth.py  issues.py  reports.py
soterra_backend/services/: __init__.py  dashboard_service.py  insights_agent_service.py  (+6 more)
(+79 files in other folders)
