[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "soterra-backend"
version = "0.1.0"
description = "Python backend package for Soterra inspection extraction and analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=25,<26",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pillow>=10,<13",
  "pydantic>=2.11,<3",
  "PyMuPDF>=1.26,<2",
  "pypdf>=5,<6",
  "python-multipart>=0.0.20,<1",
  "requests>=2.32,<3",
  "supabase>=2.16,<3",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
package = [
  "presidio-analyzer>=2.2,<3",
  "presidio-anonymizer>=2.2,<3",
  "python-doctr>=1,<2",
]
demo = ["easyocr>=1.7,<2"]
ml = ["scikit-learn>=1.5,<2"]
model = [
  "huggingface_hub>=0.36,<1",
  "smolagents[litellm]>=1.18,<2",
]
[project.scripts]
app = "soterra_backend.api:app"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
